--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,4 @@
 [defaults]
-inventory= /home/student/mycode2/mycode/hosts
-host_key_checking= False
-record_host_keys = /dev/null
-
+host_key_checking = False
+inventory = /home/student/mycode/inv/dev/
+roles_path = /home/student/mycode/roles/
